# OpenGL-SDL2

./: CMakeLists.txt  OpenGL_SDL2.sln  README.md  Shapes3D.cpp
src/HelloWorld/: HelloWorld.vcxproj  main.cpp
src/Shapes3D/: Shapes3D.vcxproj  main.cpp  packages.config
